# apps/api/docs/swagger.yaml
@@ -239,7 +239,7 @@ paths:
             $ref: '#/definitions/request.ErrorRequest'
       summary: Get all subTypes
       tags:
-        - SubType
+        - SubTypes
     post:
       consumes:
         - application/json
@@ -272,7 +272,7 @@ paths:
             $ref: '#/definitions/request.ErrorRequest'
       summary: Create subType
       tags:
-        - SubType
+        - SubTypes
   /subTypes/{mainTypeId}:
     get:
       description: Retrieve a list of all sub types for a specific main type ID
@@ -299,7 +299,38 @@ paths:
             $ref: '#/definitions/request.ErrorRequest'
       summary: Get all subTypes by main type ID
       tags:
-        - SubType
+        - SubTypes
+  /subtypes/{subTypeId}:
+    delete:
+      description: Delete a subtype by id
+      parameters:
+        - description: Subtype ID
+          in: path
+          name: subTypeId
+          required: true
+          type: integer
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: Sous-catégorie supprimée avec succés
+          schema:
+            $ref: '#/definitions/request.SuccessDeleteRequest'
+        '400':
+          description: ID invalide
+          schema:
+            $ref: '#/definitions/request.ErrorRequest'
+        '404':
+          description: Sous-catégorie non trouvée
+          schema:
+            $ref: '#/definitions/request.ErrorRequest'
+        '500':
+          description: Erreur interne
+          schema:
+            $ref: '#/definitions/request.ErrorRequest'
+      summary: Delete subtype by id
+      tags:
+        - SubTypes
   /users:
     get:
       description: Retrieve a list of all users
