# apps/api/subType/routes.go
@@ -9,4 +9,5 @@ func RegisterSubTypeRoutes(app *fiber.App, client *ent.Client) {
 	app.Get("/subTypes", GetSubTypes(client))
 	app.Get("/subTypes/:mainTypeId", GetSubTypesByMainTypeId(client))
 	app.Post("/subTypes", CreateSubType(client))
+	app.Delete("/subTypes/:subTypeId", DeleteSubTypesById(client))
 }
